--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             background-color: #000;
         }
 
+        #background-canvas {
+            /* filter: blur(5px); */
+            transform: scale(1.1);
+        }
+
         #video-container {
             position: fixed;
             top: 0;
