--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
             pointer-events: none;
         }
 
+        @media (height > width) {
+            #video-container {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 200vw;
+                height: 200vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 2;
+                pointer-events: none;
+            }
+        }
+
         video {
             max-width: 100%;
             max-height: 100%;
@@ -90,4 +105,5 @@
 </body>
 
 </html>
+
 
